# news-crawler

./: README.md  plan.md
claude/: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
claude/api/: articles.py  helpers.py  sources.py  templates.py
claude/auth/: dependencies.py  mail.py  middleware.py  router.py
claude/cli/: create_admin.py
claude/crawler/: keywords.py  pipeline.py  runner.py  scheduler.py
claude/crawler/sources/: scraper.py
claude/db/: models.py  session.py
claude/docs/superpowers/plans/: 2026-03-19-archive-upgrade.md  2026-03-22-auth-system.md
claude/docs/superpowers/specs/: 2026-03-19-archive-upgrade-design.md  2026-03-22-auth-system-design.md
claude/tests/: test_articles_api.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_router.py  test_create_admin.py  test_mail.py  test_middleware.py  test_models.py  test_password.py  test_pipeline.py  test_rss_crawler.py  test_scorer.py  test_scraper_crawler.py
claude/tests/fixtures/: sample_blog.html  sample_rss.xml
claude/ui/templates/: _article_card.html  _read_button.html  _sources_table.html  _translation_result.html  base.html  feed.html  sources.html
claude/ui/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_pending.html
codex/backend/: Dockerfile  alembic.ini  pyproject.toml
codex/backend/alembic/versions/: 20260324_0001_initial_schema.py
codex/backend/app/: __init__.py  main.py  worker.py
codex/backend/app/api/: admin.py  auth.py  deps.py  (+3 more)
codex/backend/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_content_api.py  test_crawl_pipeline.py  test_health.py  test_source_config.py
spec-kit/: .env.example  .gitignore  main.py  pyproject.toml
spec-kit/app/: config.py
spec-kit/app/api/: admin.py  articles.py  comments.py  likes.py  scraps.py  templates.py
spec-kit/app/auth/: dependencies.py  middleware.py  router.py
spec-kit/app/crawler/: dedup.py  keywords.py  loader.py  pipeline.py  runner.py  scheduler.py  scorer.py
spec-kit/app/db/: models.py  session.py
spec-kit/app/templates/: article.html  base.html  feed.html  my_scraps.html  search.html
spec-kit/config/: sources.json
spec-kit/scripts/: seed_admin.py
(+158 files in other folders)
