[project]
name = "ai-insights-service"
version = "0.1.0"
description = "AI insight collection and summarization service"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14.0",
  "beautifulsoup4>=4.12.3",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.6.1",
  "pyjwt>=2.10.1",
  "python-dateutil>=2.9.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "alembic.ini", "alembic", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
